[gd_scene load_steps=9 format=3 uid="uid://bt5gvu05wsptg"]

[ext_resource type="FontFile" uid="uid://ditsr0y55epnt" path="res://Assets/Resources/font_resource.tres" id="1_8ue08"]
[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_44rdo"]
[ext_resource type="AudioStream" uid="uid://cwq1ii8pk8umk" path="res://Assets/ui_select.ogg" id="4_nwpjf"]

[sub_resource type="Theme" id="Theme_g3vc5"]
default_font = ExtResource("1_8ue08")
default_font_size = 84

[sub_resource type="Theme" id="Theme_0bfcb"]
default_font = ExtResource("1_8ue08")
default_font_size = 32

[sub_resource type="Theme" id="Theme_10212"]
default_font = ExtResource("1_8ue08")
default_font_size = 32

[sub_resource type="Theme" id="Theme_tawio"]
default_font = ExtResource("1_8ue08")
default_font_size = 28

[sub_resource type="Theme" id="Theme_6qpm6"]
default_font = ExtResource("1_8ue08")
default_font_size = 28

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44rdo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 9
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_g3vc5")
text = "PONG"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_0bfcb")
text = "One player"

[node name="TwoPlayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_10212")
text = "Two player"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_tawio")
text = "About"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_6qpm6")
text = "Quit
"

[node name="ui_select_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nwpjf")

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TwoPlayerButton" to="." method="_on_two_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
